--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "polished": "^3.6.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.10.0",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
@@ -57,6 +58,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-helmet": "^6.1.1",
     "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/socket.io-client": "^1.4.36",
